# crawler

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  clean-build.sh  conan-profile-env  conanfile.txt  config.h.in  configure.sh  entrypoint.sh  re-build.sh  test.ini
c/: CMakeLists.txt  README.md  configure.sh  test.py  test.sh
c/include/: cli.h  config.h  httpserver.h  ini-mgr.h  rest.h  web-response.h
c/include/html/: parser.h  tag.h
c/include/http/: http-client.h  web-page.h  web-url.h
c/src/cli/: CMakeLists.txt  cli.c  main.c
c/src/common/: CMakeLists.txt  ini-mgr.c  web-response.c
c/src/common/html/: parser.c  tag.c
c/src/common/http/: http-client.c  web-page.c  web-url.c
c/src/rest/: CMakeLists.txt  cli.c  main.c  rest.c
c/src/test/: CMakeLists.txt  main.c
c/test/: array-test.c  array-test.py
cli/: cli.cpp  main.cpp
common/: CMakeLists.txt  mysqrt.cpp  web-response.cpp
common/html/: tag.cpp
common/http/: web-page.cpp  web-url.cpp
cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  configure.sh
cpp-boost/: CMakeLists.txt  README.md  clean-build.sh
cpp-boost/include/: cli.hpp  config-mgr.hpp  config.hpp  web-response.hpp
cpp-boost/include/html/: parser.hpp
cpp-boost/include/http/: web-page.hpp  web-url.hpp
cpp-boost/old/http-old/curl/: CMakeLists.txt
cpp-boost/old/test-gtest/: cli.cpp
cpp-boost/src/cli/: CMakeLists.txt  main.cpp
cpp-boost/src/common/: CMakeLists.txt
cpp-boost/src/common/html/: tag.cpp
cpp-boost/src/common/http/: http-client.cpp  web-url.cpp
cpp-boost/src/rest/: CMakeLists.txt  ini.cpp  main.cpp
cpp-boost/src/test/: html.cpp  main.cpp
cpp/include/: app.h.in  cli.hpp  config.hpp  ini.hpp  web-response.hpp
cpp/include/html/: tag.hpp
cpp/include/http/: web-page.hpp  web-url.hpp
cpp/include/rest/: httplib.h  rest-server.hpp
cpp/old/http-old/beast-v1/: http-client.hpp
cpp/old/rest-inio/: rest.cpp
cpp/old/test-gtest/: ini.cpp  main.cpp
cpp/src/cli/: CMakeLists.txt  cli.cpp  main.cpp
cpp/src/common/: CMakeLists.txt  main.cpp  web-response.cpp
cpp/src/common/html/: parser.cpp  tag.cpp
cpp/src/common/http/: web-page.cpp  web-url.cpp
cpp/src/rest/: CMakeLists.txt  cli.cpp  main.cpp  rest-server.cpp
cpp/src/test/: CMakeLists.txt  http.cpp  ini.cpp  main.cpp  simple-test.cpp
etc/: test.ini
go/: README.md  go.mod  go.sum
go/src/: cli.go  html.go  http.go  main.go
include/: cli.hpp  config-manager.hpp  config-mgr.hpp  config.hpp  ini.hpp  rest.hpp  web-response.hpp
include/html/: parser.hpp  tag.hpp
include/http/: http-client.hpp  web-page.hpp  web-url.hpp
mysqrt/: CMakeLists.txt  mysqrt.cpp
old/http-old/: http-client.cpp  http-client.hpp
old/http-old/beast-v2/: http-client.hpp
old/test-gtest/: html.cpp
rest/: CMakeLists.txt  cli.cpp  ini.cpp  main.cpp  rest.cpp
rust/: Cargo.toml  README.md
rust/html/: test-href.html
rust/old/rest/: server.rs
rust/src/: cli.rs  configuration.rs  crawler.rs  html.rs  http.rs  main.rs  model.rs  rest.rs  test.rs
src/: CMakeLists.txt  cli.cpp  cli.hpp  config-manager.cpp  config.cpp  ini.cpp  main.cpp  rest.cpp
src/cli/: CMakeLists.txt  cli.cpp  main.cpp
src/common/: CMakeLists.txt  web-response.cpp
src/common/html/: parser.cpp  tag.cpp
src/common/http/: http-client.cpp  web-page.cpp  web-url.cpp
src/html/: parser.cpp  tag.cpp
src/http/: http-client.cpp  web-url.cpp
src/rest/: CMakeLists.txt  cli.cpp  config-mgr.cpp  main.cpp  rest.cpp
src/test/: CMakeLists.txt  cli.cpp  http.cpp
test/: CMakeLists.txt  cli.cpp  html.cpp  http.cpp  main.cpp  mysqrt.cpp  test-1.cpp  test-2.cpp  test-3.cpp
var/: Dockerfile
var/www/html/: simple-test.html  test.html
