[package]
name = "crawler"
version = "0.1.0"
authors = ["gv"]
edition = "2018"

[dependencies]
getopts = "0.2"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
actix-web = "3"
#html_parser = "0.6.2"
scraper = "0.12.0"
http = "0.2.4"
isahc = "1.4.0"
#curl = "0.4.38"
#reqwest = "0.11.4"
serde = "1.0.127"
serde_json = "1.0.66"
